Change styles for chat messages that fixed crash on iOS Safari.

--- a/public/src/css/partials/chat.css
+++ b/public/src/css/partials/chat.css
@@ -105,10 +105,7 @@
 }
 
 .sp-messages {
-    position: relative;
-    bottom: -80%;
-    right: 0;
-    left: 0;
+    min-height: 100%;
     display: -webkit-box;
     display: -moz-box;
     display: -ms-flexbox;
@@ -119,6 +116,9 @@
     -ms-flex-direction: column;
     -webkit-flex-direction: column;
     flex-direction: column;
+    -ms-justify-content: flex-start;
+    -webkit-justify-content: flex-start;
+    justify-content: flex-end;
 }
 
 .sp-message {
@@ -129,6 +129,7 @@
     min-width: 48px;
     min-height: 35px;
     max-width: 60%;
+    border-image-width: auto;
 }
 
 .sp-messages-date {
@@ -149,14 +150,14 @@
     -ms-flex-item-align: end;
     -webkit-align-self: flex-end;
     align-self: flex-end;
-    background-color: #00d449;
     color: white;
-    -webkit-mask-box-image: url("data:image/svg+xml;charset=utf-8,<svg height='35' viewBox='0 0 96 70' width='48' xmlns='http://www.w3.org/2000/svg'><path d='m84 35c1 7-5 37-42 35-37 2-43-28-42-35-1-7 5-37 42-35 37-2 43 28 42 35z'/></svg>") 49.5% 55.75% 49.5% 43.25%;
+    border-image-source: url("data:image/svg+xml;charset=utf-8,<svg height='35' viewBox='0 0 96 70' width='48' xmlns='http://www.w3.org/2000/svg'><path style='fill: #00d449' d='m84 35c1 7-5 37-42 35-37 2-43-28-42-35-1-7 5-37 42-35 37-2 43 28 42 35z'/></svg>");
+    border-image-slice: 50% 56% 50% 44% fill;
 }
 
 .sp-message-sent.sp-message-last {
     margin-bottom: 8px;
-    -webkit-mask-box-image: url("data:image/svg+xml;charset=utf-8,<svg height='35' viewBox='0 0 96 70' width='48' xmlns='http://www.w3.org/2000/svg'><path d='m84 35c1 7-5 37-42 35-37 2-43-28-42-35-1-7 5-37 42-35 37-2 43 28 42 35z'/><path d='m96 70c-6-2-12-10-12-19v-16l-14 27s8 8 26 8z'/></svg>") 49.5% 55.75% 49.5% 43.25%;
+    border-image-source: url("data:image/svg+xml;charset=utf-8,<svg height='35' viewBox='0 0 96 70' width='48' xmlns='http://www.w3.org/2000/svg'><path style='fill: #00d449' d='m84 35c1 7-5 37-42 35-37 2-43-28-42-35-1-7 5-37 42-35 37-2 43 28 42 35z'/><path style='fill: #00d449' d='m96 70c-6-2-12-10-12-19v-16l-14 27s8 8 26 8z'/></svg>");
 }
 
 .sp-message-received {
@@ -164,14 +165,14 @@
     -ms-flex-item-align: start;
     -webkit-align-self: flex-start;
     align-self: flex-start;
-    background-color: #e5e5ea;
     color: black;
-    -webkit-mask-box-image: url("data:image/svg+xml;charset=utf-8,<svg height='35' viewBox='0 0 96 70' width='48' xmlns='http://www.w3.org/2000/svg'><path d='m96 35c1 7-5 37-42 35-37 2-43-28-42-35-1-7 5-37 42-35 37-2 43 28 42 35z'/></svg>") 49.5% 43.25% 49.5% 55.75%;
+    border-image-source: url("data:image/svg+xml;charset=utf-8,<svg height='35' viewBox='0 0 96 70' width='48' xmlns='http://www.w3.org/2000/svg'><path style='fill: #e5e5ea' d='m96 35c1 7-5 37-42 35-37 2-43-28-42-35-1-7 5-37 42-35 37-2 43 28 42 35z'/></svg>");
+    border-image-slice: 50% 44% 50% 56% fill;
 }
 
 .sp-message-received.sp-message-last {
     margin-bottom: 8px;
-    -webkit-mask-box-image: url("data:image/svg+xml;charset=utf-8,<svg height='35' viewBox='0 0 96 70' width='48' xmlns='http://www.w3.org/2000/svg'><path d='m96 35c1 7-5 37-42 35-37 2-43-28-42-35-1-7 5-37 42-35 37-2 43 28 42 35z'/><path d='m0 70c6-2 12-10 12-19v-16l14 27s-8 8-26 8z'/></svg>") 49.5% 43.25% 49.5% 55.75%;
+    border-image-source: url("data:image/svg+xml;charset=utf-8,<svg height='35' viewBox='0 0 96 70' width='48' xmlns='http://www.w3.org/2000/svg'><path style='fill: #e5e5ea' d='m96 35c1 7-5 37-42 35-37 2-43-28-42-35-1-7 5-37 42-35 37-2 43 28 42 35z'/><path style='fill: #e5e5ea' d='m0 70c6-2 12-10 12-19v-16l14 27s-8 8-26 8z'/></svg>");
 }
 
 .sp-message.sp-message-pic {
